--- a/hobby/hobby.html
+++ b/hobby/hobby.html
@@ -17,7 +17,7 @@
                 </div>
                 <div class="header-menu">
                     <ul>
-                        <li><a href="../myprofile.html">ホーム</a></li>
+                        <li><a href="../index.html">ホーム</a></li>
                         <li><a href="../profile/profile.html">プロフィール</a></li>
                         <li><a href="./hobby.html">趣味とか</a></li>
                     </ul>
