--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                         <li><a href="hobby/hobby.html">趣味とか</a></li>
                     </ul>
                 </div>
+                <div class="clear"></div>
             </div>
         </header>
         <main>
