--- a/hobby/hobby.html
+++ b/hobby/hobby.html
@@ -22,6 +22,7 @@
                         <li><a href="./hobby.html">趣味とか</a></li>
                     </ul>
                 </div>
+                <div class="clear"></div>
             </div>
         </header>
         <main>
