--- a/profile/profile.html
+++ b/profile/profile.html
@@ -28,7 +28,7 @@
             <div class="profile-main">
                 <div class="profile">
                     <h1>基礎プロフィール</h1>
-                    <h2>名前(というかハンドルネーム)</h2>
+                    <h2>名前(ハンドルネーム)</h2>
                     <p>消費者ニーズヘッグ</p>
                     <h2>生まれ</h2>
                     <p>日本のどっか</p>
