--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="消費者ニーズヘッグのただの自己紹介サイト">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     </head>
     <body>
         <header>
@@ -20,6 +21,16 @@
                         <li><a href="profile/profile.html">プロフィール</a></li>
                         <li><a href="hobby/hobby.html">趣味とか</a></li>
                     </ul>
+                    <!-- 追加部分 全てのページヘッダーに追加 -->
+                    <div class="header-menu2">
+                        <img src="images/IMG_3758.PNG" class="humb">
+                        <ul class="column-menu">
+                            <li class="column-menu-list"><a href="./myprofile.html">ホーム</a></li>
+                            <li class="column-menu-list"><a href="profile/profile.html">プロフィール</a></li>
+                            <li class="column-menu-list"><a href="./hobby/hobby.html">趣味とか</a></li>
+                        </ul>
+                    </div>
+                    <!--　ここまで　-->
                 </div>
             </div>
         </header>
@@ -47,5 +58,6 @@
                 </div>
             </div>
         </footer>
+        <script src="js/script.js"></script>
     </body>
 </html>
