--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     <div class="header-menu2">
                         <img src="images/IMG_3758.PNG" class="humb">
                         <ul class="column-menu">
-                            <li class="column-menu-list"><a href="./myprofile.html">ホーム</a></li>
+                            <li class="column-menu-list"><a href="./index.html">ホーム</a></li>
                             <li class="column-menu-list"><a href="profile/profile.html">プロフィール</a></li>
-                            <li class="column-menu-list"><a href="./hobby/hobby.html">趣味とか</a></li>
+                            <li class="column-menu-list"><a href="hobby/hobby.html">趣味とか</a></li>
                         </ul>
                     </div>
                     <!--　ここまで　-->
