--- a/hobby/hobby.html
+++ b/hobby/hobby.html
@@ -21,6 +21,16 @@
                         <li><a href="../profile/profile.html">プロフィール</a></li>
                         <li><a href="./hobby.html">趣味とか</a></li>
                     </ul>
+                    <!-- 追加部分 全てのページヘッダーに追加 -->
+                    <div class="header-menu2">
+                        <img src="../images/IMG_3758.PNG" class="humb">
+                        <ul class="column-menu">
+                            <li class="column-menu-list"><a href="../index.html">ホーム</a></li>
+                            <li class="column-menu-list"><a href="../profile/profile.html">プロフィール</a></li>
+                            <li class="column-menu-list"><a href="./hobby.html">趣味とか</a></li>
+                        </ul>
+                    </div>
+                    <!--　ここまで　-->
                 </div>
             </div>
         </header>
