--- a/profile/profile.html
+++ b/profile/profile.html
@@ -23,7 +23,7 @@
                     </ul>
                     <!-- 追加部分 全てのページヘッダーに追加 -->
                     <div class="header-menu2">
-                        <img src="images/IMG_3758.PNG" class="humb">
+                        <img src="../images/IMG_3758.PNG" class="humb">
                         <ul class="column-menu">
                             <li class="column-menu-list"><a href="../index.html">ホーム</a></li>
                             <li class="column-menu-list"><a href="./profile.html">プロフィール</a></li>
