--- a/profile/profile.html
+++ b/profile/profile.html
@@ -16,7 +16,7 @@
                     <a href="https://sb.gungho.jp/"><img src="../images/yomagntho.PNG" alt="やまんそ"></a>
                 </div>
                 <div class="header-menu">
-                    <ul>
+                    <ul class="flex-menu">
                         <li><a href="../index.html">ホーム</a></li>
                         <li><a href="./profile.html">プロフィール</a></li>
                         <li><a href="../hobby/hobby.html">趣味とか</a></li>
