--- a/hobby/hobby-s/hobby-summons.html
+++ b/hobby/hobby-s/hobby-summons.html
@@ -16,7 +16,7 @@
                     <a href="https://sb.gungho.jp/"><img src="../../images/yomagntho.PNG" alt="やまんそ"></a>
                 </div>
                 <div class="header-menu">
-                    <ul class="menu">
+                    <ul class="flex-menu">
                         <li><a href="../../index.html">ホーム</a></li>
                         <li><a href="../../profile/profile.html">プロフィール</a></li>
                         <li><a href="../hobby.html">趣味とか</a></li>
