--- a/hobby/hobby.html
+++ b/hobby/hobby.html
@@ -42,7 +42,7 @@
                     <h2 class="hobby-h2">好きなボタンを選んでね</h2>
                     <div class="hobbys">
                         <a href="./hobby-s/hobby-summons.html">サモンズ部門</a>
-                        <a href="#">ポケモン部門</a>
+                        <a href="./hobby-p/hobby-pokemon.html">ポケモン部門</a>
                         <a href="#">遊戯王部門</a>
                         <a href="#">その他</a>
                     </div>
