--- a/hobby/hobby-s/hobby-summons.html
+++ b/hobby/hobby-s/hobby-summons.html
@@ -62,21 +62,36 @@
                     <h2 class="hobby-h2">ギャラリー</h2>
                     <div class="gallery-images">
                         <div class="gallery">
-                            <img src="../../images/IMG_3738.PNG" class="slide active">
-                            <img src="../../images/IMG_3736.PNG" class="slide">
-                            <img src="../../images/IMG_3357.PNG" class="slide">
-                            <img src="../../images/IMG_3739.PNG" class="slide">
-                            <img src="../../images/IMG_3734.PNG" class="slide">
+                            <div class="slide active">
+                                <img src="../../images/IMG_3738.PNG" class="s-img">
+                                <p>経験値ダンジョン</p>
+                            </div>
+                            <div class="slide">
+                                <img src="../../images/IMG_3736.PNG" class="s-img">
+                                <p>探究者顕現</p>
+                            </div>
+                            <div class="slide">
+                                <img src="../../images/IMG_3357.PNG" class="s-img">
+                                <p>プララヤラの塔</p>
+                            </div>
+                            <div class="slide">
+                                <img src="../../images/IMG_3739.PNG" class="s-img">
+                                <p>「断罪者サルニエンシス」ステータス</p>
+                            </div>
+                            <div class="slide">
+                                <img src="../../images/IMG_3734.PNG" class="s-img">
+                                <p>「復讐の邪眼シアエガ」覚醒解放</p>
+                            </div>
                         </div>
                         <div class="move-btn">
                             <div class="change-btn prev">←前へ</div>
                             <div class="change-btn next">次へ→</div>
-                    </div>
+                        </div>
                     </div>
                     <h2 class="hobby-h2">プレイ動画</h2>
                     <p>※画質が悪くてすみません。</p>
                     <div class="play-video">
-                    <video src="../../images/RPReplay_Final1619188476.mp4" controls autoplay muted></video>
+                    <video src="../../images/RPReplay_Final1619188476.MP4" controls autoplay muted></video>
                     </div>
                     <div class="top-back" id="back-btn">
                         一番上へ戻る
