--- a/hobby/hobby-s/hobby-summons.html
+++ b/hobby/hobby-s/hobby-summons.html
@@ -91,7 +91,7 @@
                     <h2 class="hobby-h2">プレイ動画</h2>
                     <p>※画質が悪くてすみません。</p>
                     <div class="play-video">
-                    <video src="../../images/RPReplay_Final1619188476.MP4" controls autoplay muted></video>
+                    <video src="../../images/RPReplay_Final1619188476.mp4" controls autoplay muted></video>
                     </div>
                     <div class="top-back" id="back-btn">
                         一番上へ戻る
