--- a/hobby/hobby.html
+++ b/hobby/hobby.html
@@ -43,8 +43,8 @@
                     <div class="hobbys">
                         <a href="./hobby-s/hobby-summons.html">サモンズ部門</a>
                         <a href="./hobby-p/hobby-pokemon.html">ポケモン部門</a>
-                        <a href="#">遊戯王部門</a>
-                        <a href="#">その他</a>
+                        <a href="./hobby-y/hobby-yugio.html">遊戯王部門</a>
+                        <a href="./hobby-o/hobby-others.html">その他</a>
                     </div>
                     <p>※サモンズ部門以外は未作成</p>
                 </div>
