--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
+    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>まいぷろふぃーるさいと</title>
         <meta name="description" content="消費者ニーズヘッグのただの自己紹介サイト">
+        <meta property="og:title" content="まいぷろふぃーるさいと">
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://consumernidhog44.github.io/myprofile-site/">
+        <meta property="og:image" content="https://consumernidhog44.github.io/myprofile-site/images/yomagntho.PNG">
+        <meta property="og:locale" content="ja_JP">
+        <meta property="og:site_name" content="まいぷろふぃーるさいと">
+        <meta property="og:description" content="消費者ニーズヘッグのただの自己紹介サイト">
+        <meta name="twitter:card" content="summary_large_image">
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
