--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta property="og:title" content="まいぷろふぃーるさいと">
         <meta property="og:url" content="https://consumernidhog44.github.io/myprofile-site/">
         <meta property="og:image" content="https://consumernidhog44.github.io/myprofile-site/images/yomagntho.PNG">
+        <meta property="og:type" content="website" />
         <meta property="og:locale" content="ja_JP">
         <meta property="og:site_name" content="まいぷろふぃーるさいと">
         <meta property="og:description" content="消費者ニーズヘッグのただの自己紹介サイト">
