--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html>
-    <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+<html prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# article: http://ogp.me/ns/article#">
+    <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>まいぷろふぃーるさいと</title>
@@ -13,8 +13,6 @@
         <meta property="og:site_name" content="まいぷろふぃーるさいと">
         <meta property="og:description" content="消費者ニーズヘッグのただの自己紹介サイト">
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@nidhog3845" />
-        <meta name="twitter:player" content="@nidhog3845" />
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
