--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/responsive.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <meta name="google-site-verification" content="tLyawRcyj4z3idYCoWN8ej5DcSi8n8f0qFTGO8QkmDE" />
     </head>
     <body>
         <header>
