--- a/hobby/hobby-o/hobby-others.html
+++ b/hobby/hobby-o/hobby-others.html
@@ -37,7 +37,26 @@
         <main>
             <div class="hobby-main">
                 <div class="hobby">
-                    
+                    <div class="smash">
+                        <h2 class="hobby-h2">使用ファイター</h2>
+                        <p>ゲムヲくんしか使ってません。</p>
+                        <img src="../../images/IMG_6294.JPG" class="smash-image">
+                    </div>
+
+                    <div class="smash-movie">
+                        <h2 class="hobby-h2">良試合</h2>
+                        <div class="smash-video">
+                            <video src="../../images/2021120718295100-C6D726972790F87F6521C61FBA400A1DX-[onlinevideoconverter.com].mp4" controls muted class="smash-video"></video>
+                        </div>
+
+                        <div class="smash-video">
+                            <video src="../../images/2022020513363800-C6D726972790F87F6521C61FBA400A1DX-[onlinevideoconverter.com].mp4" controls muted class="smash-video"></video>
+                        </div>
+
+                        <div class="smash-video">
+                            <video src="../../images/2021122322180100-C6D726972790F87F6521C61FBA400A1DX-[onlinevideoconverter.com].mp4" controls muted class="smash-video"></video>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
