--- a/hobby/hobby-y/hobby-yugio.html
+++ b/hobby/hobby-y/hobby-yugio.html
@@ -37,7 +37,72 @@
         <main>
             <div class="hobby-main">
                 <div class="hobby">
-                    
+                    <div class="deck">
+                        <h2 class="hobby-h2">使用デッキ（リアル）</h2>
+                        <div class="gallery-images">
+                            <div class="gallery">
+                                <div class="slide active">
+                                    <h3 class="slide-h3">サイバー・ダーク</h3>
+                                    <img src="../../images/yugio1.png" class="y-img">
+                                    <p>超大型モンスターを出してグォレンダァするデッキ</p>
+                                </div>
+                                <div class="slide">
+                                    <h3 class="slide-h3">サイバー・ドラゴン</h3>
+                                    <img src="../../images/yugio2.png" class="y-img">
+                                    <p>インチキ制圧するか後攻からグォレンダァするデッキ</p>
+                                </div>
+                                <div class="slide">
+                                    <h3 class="slide-h3">オルターガイスト</h3>
+                                    <img src="../../images/yugio3.png" class="y-img">
+                                    <p>相手の行動全部に「それダメ〜〜〜！！」って言い続けるデッキ</p>
+                                </div>
+                                <div class="slide">
+                                    <h3 class="slide-h3">バハムート・シャーク</h3>
+                                    <img src="../../images/yugio4.png" class="y-img">
+                                    <p>ソリティア</p>
+                                </div>
+                                <div class="slide">
+                                    <h3 class="slide-h3">方界</h3>
+                                    <img src="../../images/yugio5.png" class="y-img">
+                                    <p>一瞬で全てを無に還すデッキ</p>
+                                </div>
+                                <div class="slide">
+                                    <h3 class="slide-h3">デッキ破壊ワンキル</h3>
+                                    <img src="../../images/yugio6.png" class="y-img">
+                                    <p>相手に何もさせないまま終わらせるデッキ</p>
+                                </div>
+                                <div class="slide">
+                                    <h3 class="slide-h3">リバイアサン</h3>
+                                    <img src="../../images/yugio7.png" class="y-img">
+                                    <p>あだ名</p>
+                                </div>
+                            </div>
+                            <div class="move-btn">
+                                <div class="change-btn prev">←前へ</div>
+                                <div class="change-btn next">次へ→</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="master-deck">
+                        <h2 class="hobby-h2">使用デッキ（マスターデュエル）</h2>
+                        <p>詳細は書けません（ネタバレ防止のため）が、オルターガイストと方界を使ってます。</p>
+                        <div class="duel-id">
+                            <p>ID:345-284-598　←フレンド申請どうぞ。</p>
+                        </div>
+                    </div>
+
+                    <div class="duel-movie">
+                        <h2 class="hobby-h2">決闘動画</h2>
+                        <p>※マスターデュエルのもの</p>
+                        <div class="play-video">
+                            <video src="../../images/RPReplay_Final1644892959 (video-converter.com).mp4" controls autoplay muted class="duel-video"></video>
+                        </div>
+                    </div>
+
+                    <div class="top-back" id="back-btn">
+                        一番上へ戻る
+                    </div>
                 </div>
             </div>
         </main>
