--- a/hobby/hobby-o/hobby-others.html
+++ b/hobby/hobby-o/hobby-others.html
@@ -57,6 +57,11 @@
                             <video src="../../images/2021122322180100-C6D726972790F87F6521C61FBA400A1DX-[onlinevideoconverter.com].mp4" controls muted class="smash-video"></video>
                         </div>
                     </div>
+                    
+                    <div class="top-back" id="back-btn">
+                        一番上へ戻る
+                    </div>
+                    
                 </div>
             </div>
         </main>
