--- a/hobby/hobby.html
+++ b/hobby/hobby.html
@@ -44,16 +44,15 @@
                         <a href="./hobby-s/hobby-summons.html">サモンズ部門</a>
                         <a href="./hobby-p/hobby-pokemon.html">ポケモン部門</a>
                         <a href="./hobby-y/hobby-yugio.html">遊戯王部門</a>
-                        <a href="./hobby-o/hobby-others.html">その他</a>
+                        <a href="./hobby-o/hobby-others.html">スマブラ部門</a>
                     </div>
-                    <p>※サモンズ部門以外は未作成</p>
                 </div>
             </div>
         </main>
         <footer>
             <div class="footer-wrapper">
                 <div class="footer-text">
-                    <p>※レスポンシブデザインの練習用ページです。</p>
+
                 </div>
             </div>
         </footer>
